syntax = "proto3";
package havp;

import "gwm/havp/havp_common.proto";

message AVPMapData {
  string id = 1; // ID 唯一标识符，可不可修改。例如 ONTFB1239797 或者 长泰广场-记忆泊车-泊入-20221012
  string name = 2; // name 路线名，是客户可修改的名字  例如（爸爸家的停车位）
  double longitude = 3;    // 地图的经度
  double latitude = 4;    // 地图的纬度
  repeated Point route = 5; // 总路径, 一系列坐标点。一般是0.1米一个。直线道路会进行抽稀。
  repeated Point floor_entrance = 6; // 总路径, 一系列坐标点。一般是0.1米一个。直线道路会进行抽稀。
  repeated Point floor_exit = 7; // 总路径, 一系列坐标点。一般是0.1米一个。直线道路会进行抽稀。
  repeated ParkingSpace parking_spaces = 8; // 地图中存储的停车位，全局坐标系。
  repeated MapObstacle map_obstacles = 9; // 地图中存储的障碍物，全局坐标系
  //  int32 mapping_process = 10; // 地图创建进度。 ** 有专门的SOMEIP接口传这个值

  int32 length = 11; // 地图的总长度, 目前 追势 使用
  int32 creation_time = 12; // 地图的创建时间, 目前 追势 使用
};

